changing library to do OLS

--- a/Ch3/Ex8.ipynb
+++ b/Ch3/Ex8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
-    "from scape.stats import linregress, t\n"
+    "from scipy.stats import linregress, t\n",
+    "import statsmodels.formula.api as smf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,49 +45,53 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients:\n",
-      "             Estimate  Std. Error\n",
-      "Intercept   39.935861    0.717499\n",
-      "horsepower  -0.157845    0.006446\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                    mpg   R-squared:                       0.606\n",
+      "Model:                            OLS   Adj. R-squared:                  0.605\n",
+      "Method:                 Least Squares   F-statistic:                     599.7\n",
+      "Date:                Thu, 23 Feb 2023   Prob (F-statistic):           7.03e-81\n",
+      "Time:                        21:39:19   Log-Likelihood:                -1178.7\n",
+      "No. Observations:                 392   AIC:                             2361.\n",
+      "Df Residuals:                     390   BIC:                             2369.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept     39.9359      0.717     55.660      0.000      38.525      41.347\n",
+      "horsepower    -0.1578      0.006    -24.489      0.000      -0.171      -0.145\n",
+      "==============================================================================\n",
+      "Omnibus:                       16.432   Durbin-Watson:                   0.920\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               17.305\n",
+      "Skew:                           0.492   Prob(JB):                     0.000175\n",
+      "Kurtosis:                       3.299   Cond. No.                         322.\n",
+      "==============================================================================\n",
       "\n",
-      "R-squared: 0.6059, p-value: 7.0e-81\n",
-      "\n",
-      "Confidence Intervals:\n",
-      "slope (95%): -0.157845 +/- 0.012672\n",
-      "intercept (95%): 39.935861 +/- 1.410649\n"
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     }
    ],
    "source": [
-    "result = linregress(data[\"horsepower\"], data[\"mpg\"])\n",
-    "\n",
-    "print(f\"\"\"Coefficients:\n",
-    "             Estimate  Std. Error\n",
-    "Intercept   {result.intercept:.6f}    {result.intercept_stderr:.6f}\n",
-    "horsepower  {result.slope:.6f}    {result.stderr:.6f}\"\"\")\n",
-    "\n",
-    "print(f\"\\nR-squared: {result.rvalue ** 2:.4f}, p-value: {result.pvalue:.1e}\")\n",
-    "\n",
-    "print(\"\\nConfidence Intervals:\")\n",
-    "print(f\"slope (95%): {result.slope:.6f} +/- {ts*result.stderr:.6f}\")\n",
-    "print(f\"intercept (95%): {result.intercept:.6f}\"\n",
-    "      f\" +/- {ts*result.intercept_stderr:.6f}\")\n"
+    "results = smf.ols('mpg ~ horsepower', data=data).fit()\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a)"
    ]
   },
   {
@@ -102,7 +107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted value:\n",
+      " 0    24.467077\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = results.predict(exog=dict(horsepower=98))\n",
+    "\n",
+    "print(\"Predicted value:\\n\", y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
