fix useless imports

--- a/Ch3/Ex10.ipynb
+++ b/Ch3/Ex10.ipynb
@@ -2,17 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "from scipy.stats import linregress, t\n",
     "import statsmodels.formula.api as smf\n",
-    "from patsy.contrasts import Treatment\n",
     "\n",
     "import sys; sys.path.insert(0, '..')\n",
     "from utils import LinearRegDiagnostic"
@@ -30,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,144 +99,144 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>7.56</td>\n",
-       "      <td>108</td>\n",
-       "      <td>26</td>\n",
+       "      <th>152</th>\n",
+       "      <td>7.64</td>\n",
+       "      <td>128</td>\n",
+       "      <td>78</td>\n",
        "      <td>0</td>\n",
-       "      <td>408</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>56</td>\n",
+       "      <td>341</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>45</td>\n",
+       "      <td>13</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>6.88</td>\n",
+       "      <td>96</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>161</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>27</td>\n",
        "      <td>14</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>11.17</td>\n",
-       "      <td>107</td>\n",
-       "      <td>117</td>\n",
-       "      <td>11</td>\n",
-       "      <td>148</td>\n",
+       "      <th>291</th>\n",
+       "      <td>6.64</td>\n",
        "      <td>118</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>52</td>\n",
-       "      <td>18</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>106</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>39</td>\n",
+       "      <td>17</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>8.21</td>\n",
-       "      <td>127</td>\n",
-       "      <td>44</td>\n",
-       "      <td>13</td>\n",
-       "      <td>160</td>\n",
-       "      <td>123</td>\n",
-       "      <td>Good</td>\n",
+       "      <th>391</th>\n",
+       "      <td>6.10</td>\n",
+       "      <td>153</td>\n",
        "      <td>63</td>\n",
-       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>124</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>56</td>\n",
+       "      <td>16</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>5.40</td>\n",
+       "      <td>149</td>\n",
+       "      <td>73</td>\n",
+       "      <td>13</td>\n",
+       "      <td>381</td>\n",
+       "      <td>163</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>26</td>\n",
+       "      <td>11</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>10.59</td>\n",
-       "      <td>131</td>\n",
-       "      <td>120</td>\n",
-       "      <td>15</td>\n",
-       "      <td>262</td>\n",
-       "      <td>124</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>30</td>\n",
+       "      <th>297</th>\n",
+       "      <td>3.07</td>\n",
+       "      <td>118</td>\n",
+       "      <td>83</td>\n",
+       "      <td>13</td>\n",
+       "      <td>276</td>\n",
+       "      <td>104</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>75</td>\n",
        "      <td>10</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>7.80</td>\n",
-       "      <td>119</td>\n",
-       "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>245</td>\n",
-       "      <td>122</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>56</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>281</th>\n",
-       "      <td>11.19</td>\n",
-       "      <td>122</td>\n",
-       "      <td>69</td>\n",
-       "      <td>7</td>\n",
-       "      <td>303</td>\n",
-       "      <td>105</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>45</td>\n",
-       "      <td>16</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>6.67</td>\n",
-       "      <td>156</td>\n",
-       "      <td>42</td>\n",
+       "      <th>342</th>\n",
+       "      <td>7.81</td>\n",
+       "      <td>137</td>\n",
+       "      <td>102</td>\n",
        "      <td>13</td>\n",
-       "      <td>170</td>\n",
-       "      <td>173</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>74</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>8.01</td>\n",
-       "      <td>128</td>\n",
-       "      <td>39</td>\n",
-       "      <td>12</td>\n",
-       "      <td>356</td>\n",
+       "      <td>422</td>\n",
        "      <td>118</td>\n",
        "      <td>Medium</td>\n",
        "      <td>71</td>\n",
        "      <td>10</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>356</th>\n",
-       "      <td>3.58</td>\n",
-       "      <td>142</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0</td>\n",
-       "      <td>111</td>\n",
-       "      <td>164</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>72</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>307</th>\n",
-       "      <td>5.90</td>\n",
-       "      <td>138</td>\n",
-       "      <td>92</td>\n",
+       "      <th>162</th>\n",
+       "      <td>3.63</td>\n",
+       "      <td>122</td>\n",
+       "      <td>74</td>\n",
        "      <td>0</td>\n",
+       "      <td>424</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>51</td>\n",
        "      <td>13</td>\n",
-       "      <td>120</td>\n",
-       "      <td>Bad</td>\n",
-       "      <td>61</td>\n",
-       "      <td>12</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>7.62</td>\n",
+       "      <td>132</td>\n",
+       "      <td>98</td>\n",
+       "      <td>2</td>\n",
+       "      <td>265</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Bad</td>\n",
+       "      <td>62</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>12.04</td>\n",
+       "      <td>145</td>\n",
+       "      <td>69</td>\n",
+       "      <td>19</td>\n",
+       "      <td>501</td>\n",
+       "      <td>105</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>45</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -248,31 +244,31 @@
       ],
       "text/plain": [
        "     Sales  CompPrice  Income  Advertising  Population  Price ShelveLoc  Age  \\\n",
-       "192   7.56        108      26            0         408     93    Medium   56   \n",
-       "14   11.17        107     117           11         148    118      Good   52   \n",
-       "296   8.21        127      44           13         160    123      Good   63   \n",
-       "220  10.59        131     120           15         262    124    Medium   30   \n",
-       "226   7.80        119      33            0         245    122      Good   56   \n",
-       "281  11.19        122      69            7         303    105      Good   45   \n",
-       "191   6.67        156      42           13         170    173      Good   74   \n",
-       "170   8.01        128      39           12         356    118    Medium   71   \n",
-       "356   3.58        142     109            0         111    164      Good   72   \n",
-       "307   5.90        138      92            0          13    120       Bad   61   \n",
+       "152   7.64        128      78            0         341    128      Good   45   \n",
+       "347   6.88         96      39            0         161    112      Good   27   \n",
+       "291   6.64        118      70            0         106     89       Bad   39   \n",
+       "391   6.10        153      63            0          49    124       Bad   56   \n",
+       "228   5.40        149      73           13         381    163       Bad   26   \n",
+       "297   3.07        118      83           13         276    104       Bad   75   \n",
+       "342   7.81        137     102           13         422    118    Medium   71   \n",
+       "162   3.63        122      74            0         424    149    Medium   51   \n",
+       "133   7.62        132      98            2         265     97       Bad   62   \n",
+       "212  12.04        145      69           19         501    105    Medium   45   \n",
        "\n",
        "     Education Urban   US  \n",
-       "192         14    No   No  \n",
-       "14          18   Yes  Yes  \n",
-       "296         18   Yes  Yes  \n",
-       "220         10   Yes  Yes  \n",
-       "226         14   Yes   No  \n",
-       "281         16    No  Yes  \n",
-       "191         14   Yes  Yes  \n",
-       "170         10   Yes  Yes  \n",
-       "356         12   Yes   No  \n",
-       "307         12   Yes   No  "
+       "152         13    No   No  \n",
+       "347         14    No   No  \n",
+       "291         17   Yes   No  \n",
+       "391         16   Yes   No  \n",
+       "228         11    No  Yes  \n",
+       "297         10   Yes  Yes  \n",
+       "342         10    No  Yes  \n",
+       "162         13   Yes   No  \n",
+       "133         12   Yes  Yes  \n",
+       "212         11   Yes  Yes  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,8 +299,8 @@
       "Dep. Variable:                  Sales   R-squared:                       0.239\n",
       "Model:                            OLS   Adj. R-squared:                  0.234\n",
       "Method:                 Least Squares   F-statistic:                     41.52\n",
-      "Date:                Thu, 04 May 2023   Prob (F-statistic):           2.39e-23\n",
-      "Time:                        19:20:30   Log-Likelihood:                -927.66\n",
+      "Date:                Fri, 05 May 2023   Prob (F-statistic):           2.39e-23\n",
+      "Time:                        15:15:53   Log-Likelihood:                -927.66\n",
       "No. Observations:                 400   AIC:                             1863.\n",
       "Df Residuals:                     396   BIC:                             1879.\n",
       "Df Model:                           3                                         \n",
@@ -380,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +388,8 @@
       "Dep. Variable:                  Sales   R-squared:                       0.873\n",
       "Model:                            OLS   Adj. R-squared:                  0.870\n",
       "Method:                 Least Squares   F-statistic:                     243.4\n",
-      "Date:                Thu, 04 May 2023   Prob (F-statistic):          1.60e-166\n",
-      "Time:                        20:28:39   Log-Likelihood:                -568.99\n",
+      "Date:                Fri, 05 May 2023   Prob (F-statistic):          1.60e-166\n",
+      "Time:                        15:15:53   Log-Likelihood:                -568.99\n",
       "No. Observations:                 400   AIC:                             1162.\n",
       "Df Residuals:                     388   BIC:                             1210.\n",
       "Df Model:                          11                                         \n",
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,8 +460,8 @@
       "Dep. Variable:                  Sales   R-squared:                       0.872\n",
       "Model:                            OLS   Adj. R-squared:                  0.870\n",
       "Method:                 Least Squares   F-statistic:                     381.4\n",
-      "Date:                Thu, 04 May 2023   Prob (F-statistic):          1.25e-170\n",
-      "Time:                        20:32:00   Log-Likelihood:                -571.24\n",
+      "Date:                Fri, 05 May 2023   Prob (F-statistic):          1.25e-170\n",
+      "Time:                        15:15:53   Log-Likelihood:                -571.24\n",
       "No. Observations:                 400   AIC:                             1158.\n",
       "Df Residuals:                     392   BIC:                             1190.\n",
       "Df Model:                           7                                         \n",
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
