--- a/Ch3/Ex12.ipynb
+++ b/Ch3/Ex12.ipynb
@@ -2,23 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "from scipy.stats import linregress, t\n",
-    "import statsmodels.formula.api as smf\n",
-    "from patsy.contrasts import Treatment\n",
-    "\n",
-    "import sys; sys.path.insert(0, '..')\n",
-    "from utils import LinearRegDiagnostic"
+    "import statsmodels.formula.api as smf\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -56,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +92,6 @@
     "\n",
     "print(f\"y onto x: {results_y.params}\\nx onto y: {results_x.params}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
