--- a/Ch3/Ex8.ipynb
+++ b/Ch3/Ex8.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
-    "from scipy.stats import linregress, t\n",
     "import statsmodels.formula.api as smf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +56,8 @@
       "Dep. Variable:                    mpg   R-squared:                       0.606\n",
       "Model:                            OLS   Adj. R-squared:                  0.605\n",
       "Method:                 Least Squares   F-statistic:                     599.7\n",
-      "Date:                Thu, 23 Feb 2023   Prob (F-statistic):           7.03e-81\n",
-      "Time:                        21:39:19   Log-Likelihood:                -1178.7\n",
+      "Date:                Fri, 05 May 2023   Prob (F-statistic):           7.03e-81\n",
+      "Time:                        15:19:25   Log-Likelihood:                -1178.7\n",
       "No. Observations:                 392   AIC:                             2361.\n",
       "Df Residuals:                     390   BIC:                             2369.\n",
       "Df Model:                           1                                         \n",
@@ -82,8 +80,8 @@
     }
    ],
    "source": [
-    "results = smf.ols('mpg ~ horsepower', data=data).fit()\n",
-    "print(results.summary())"
+    "result = smf.ols('mpg ~ horsepower', data=data).fit()\n",
+    "print(result.summary())"
    ]
   },
   {
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -118,41 +116,68 @@
       " 0    24.467077\n",
       "dtype: float64\n"
      ]
-    }
-   ],
-   "source": [
-    "y_pred = results.predict(exog=dict(horsepower=98))\n",
-    "\n",
-    "print(\"Predicted value:\\n\", y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted value: 24.467077\n",
-      "Interval confidence for prediction:\n",
-      "(23.511150, 25.423005)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Intercept</th>\n",
+       "      <td>38.525212</td>\n",
+       "      <td>41.346510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horsepower</th>\n",
+       "      <td>-0.170517</td>\n",
+       "      <td>-0.145172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    0          1\n",
+       "Intercept   38.525212  41.346510\n",
+       "horsepower  -0.170517  -0.145172"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = result.intercept + result.slope * 98\n",
-    "y_stderr = np.sqrt(result.intercept_stderr ** 2 + (98 * result.stderr) ** 2)\n",
+    "y_pred = result.predict(exog=dict(horsepower=98))\n",
     "\n",
-    "print(f\"Predicted value: {y_pred:.6f}\")\n",
-    "print(f\"Interval confidence for prediction:\")\n",
-    "print(f\"({y_pred - y_stderr:.6f}, {y_pred + y_stderr:.6f})\")\n"
+    "print(\"Predicted value:\\n\", y_pred)\n",
+    "result.conf_int()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2623,13 +2648,6 @@
     "                 title=\"Scatter plot of mpg vs. horsepower\")\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
